packages/gatsby-theme-carbon/src/components/Tabs/Tabs.module.scss
.tab-list {
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  scrollbar-width: none;
  overflow-x: auto;
  @include carbon--breakpoint('md') {
    overflow: visible;
  }
}

.panel {
  color: $text-01;
  --space: 0;
  padding: $spacing-06;
  background: $ui-background;
  margin-left: -$spacing-05;
  margin-right: -$spacing-05;
  margin-bottom: $spacing-08;
}

.tab {
  @include carbon--type-style('body-short-01');
  position: relative;
  display: inline-block;
  background-color: $ui-background;
  height: 3rem;
  text-align: left;
  min-width: 0;
  align-items: center;
  padding: $spacing-03 $spacing-05;
  white-space: nowrap;
  transition: all $duration--fast-02;
  border: none;
  margin: 0;
  border-right: 1px solid $ui-01;

  &::-moz-focus-inner {
    border: 0;
  }

  &:focus {
    outline: 2px solid $focus;
    outline-offset: 2px;
    z-index: 1; // allows overflow to be above subsequent tab
  }

  &:hover {
    background-color: $hover-ui;
  }
}

.tab[aria-selected='true'] {
  background-color: $ui-05;
  color: $inverse-01;
  border-right: none;
}

